--- a/www/index.html
+++ b/www/index.html
@@ -14,14 +14,13 @@
 </head>
 
 <body class="">
-
-
   <!--nav onde tem o logo-->
   <nav class="navbar navbar-dark pt-0 mt-0 corCamufladoVerde">
     <a class="navbar-brand mx-auto" href="#">
       <img src="img/organization_logo.gif" width="70" height="70" alt="">
     </a>
   </nav>
+  
   <!-------------------------------nave onde tem o botao dropdown--------------------------------------->
   <nav class="navbar navbar-dark corCamufladoVerde">
     <button class="navbar-toggler mb-1 ml-0" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,57 +29,56 @@
       <svg class="bi bi-list" width="1em" height="1em" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" d="M4.5 13.5A.5.5 0 015 13h10a.5.5 0 010 1H5a.5.5 0 01-.5-.5zm0-4A.5.5 0 015 9h10a.5.5 0 010 1H5a.5.5 0 01-.5-.5zm0-4A.5.5 0 015 5h10a.5.5 0 010 1H5a.5.5 0 01-.5-.5z" clip-rule="evenodd"/>
       </svg>
-
     </button>
 
     <!--icon de compartilhar o app-->
     <img src="img/share.png" width="30" height="30">
 
-    <!--droplist do botao dropdown-->
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <hr>
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <a class="nav-link pt-0" href="#">Avalie Nosso Aplicativo!<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Sugestões</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Desenvolvedores</a>
-        </li>
-      </ul>
+    	<!--droplist do botao dropdown-->
+	    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+	      	<hr>
+	    	<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+	        	<li class="nav-item">
+	          		<a class="nav-link pt-0" href="#">Avalie Nosso Aplicativo!<span class="sr-only">(current)</span></a>
+	        	</li>
+	        	<li class="nav-item">
+	          		<a class="nav-link" href="#">Sugestões</a>
+	        	</li>
+		        <li class="nav-item">
+		        	<a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Desenvolvedores</a>
+		        </li>
+	     	</ul>
+	    </div>
 
-    </div>
-  </nav>    
+  	</nav>    
 
-<!--opcoes do menu-->
-<div class="container text-center p-5 mt-5 px-0">
-  <div class="row">
-      <div class="col-4">xxxxxxx</div>
-      <div class="col-4">xxxxxxx</div>
-      <div class="col-4">xxxxxxx</div>
-  </div>
-</div>
-<div class="container text-center p-5">
-  <div class="row">
-      <div class="col-4">xxxxxxx</div>
-      <div class="col-4">xxxxxxx</div>
-      <div class="col-4">xxxxxxx</div>
-  </div>
-</div>
-<div class="container text-center p-5">
-  <div class="row">
-      <div class="col-4">xxxxxxx</div>
-      <div class="col-4">xxxxxxx</div>
-      <div class="col-4">xxxxxxx</div>
-  </div>
-</div>
-<nav class="navbar navbar-dark corCamufladoVerde p-5 mt-5" width="70" height="70">
-    <a class="navbar-brand mx-auto" href="#">
-    
-    </a>
-  </nav>
+	<!--opcoes do menu-->
+	<div class="container text-center p-5 mt-5 px-0">
+	  <div class="row">
+	      <div class="col-4">xxxxxxx</div>
+	      <div class="col-4">xxxxxxx</div>
+	      <div class="col-4">xxxxxxx</div>
+	  </div>
+	</div>
+
+	<div class="container text-center p-5">
+	  <div class="row">
+	      <div class="col-4">xxxxxxx</div>
+	      <div class="col-4">xxxxxxx</div>
+	      <div class="col-4">xxxxxxx</div>
+	  </div>
+	</div>
+
+	<div class="container text-center p-5">
+	  <div class="row">
+	      <div class="col-4">xxxxxxx</div>
+	      <div class="col-4">xxxxxxx</div>
+	      <div class="col-4">xxxxxxx</div>
+	  </div>
+	</div>
+	<nav class="navbar navbar-dark corCamufladoVerde p-5 mt-5" width="70" height="70">
+    	<a class="navbar-brand mx-auto" href="#">LINK</a>
+	</nav>
   <!--Bibliotecas-->
   <script type="text/javascript" src="cordova.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
