Add pasta de img armas, arquivo aqs.js (Contem os dados das Armas, Quadros e Servicos em JSON), arquivo html para conteudo e exemplo se side bar com os arquivos html, css e js

--- a/www/index.html
+++ b/www/index.html
@@ -10,14 +10,14 @@
   <meta http-equiv="Content-Security-Policy" content="'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" >
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/index.css" />
-  <title>Hello World</title>
+  <title>TG App</title>
 </head>
 
 <body class="">
   <!--nav onde tem o logo-->
   <nav class="navbar navbar-dark pt-0 mt-0 corCamufladoVerde">
     <a class="navbar-brand mx-auto" href="#">
-      <img src="img/organization_logo.gif" width="70" height="70" alt="">
+      <img id="logoTGMenu" src="img/organization_logo.gif" width="70" height="70" alt="">
     </a>
   </nav>
   
