--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
-  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
+  <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
   <meta http-equiv="Content-Security-Policy" content="'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" >
   
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -18,7 +18,6 @@
 <body class="">
 	<header>
 		<!--========= Side bar  ===========-->
-		
 		<nav class="navbar navbar-expand-lg fixed-top shadow navbar-dark navbar-offcanvas" style="background-color: #14340D;">
 			<a class="navbar-brand mr-auto" href="#">APP TG BIZU</a>
 	
@@ -29,28 +28,26 @@
 			<div class="navbar-collapse offcanvas-collapse">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="https://www.youtube.com/c/decomtvs">Dashboard <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="">Dashboard <span class="sr-only">(current)</span></a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="https://www.youtube.com/c/decomtvs">Notifications</a>
+						<a class="nav-link" href="">Notifications</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="https://www.youtube.com/c/decomtvs">Profile</a>
+						<a class="nav-link" href="">Profile</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="https://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Settings</a>
 						<div class="dropdown-menu" aria-labelledby="dropdown01">
-							<a class="dropdown-item" href="https://www.youtube.com/c/decomtvs">Action</a>
-							<a class="dropdown-item" href="https://www.youtube.com/c/decomtvs">Another action</a>
-							<a class="dropdown-item" href="https://www.youtube.com/c/decomtvs">Something else here</a>
+							<a class="dropdown-item" href="">Action</a>
+							<a class="dropdown-item" href="">Another action</a>
+							<a class="dropdown-item" href="">Something else here</a>
 						</div>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="https://www.youtube.com/c/decomtvs" target="_blank">Developer</a>
+						<a class="nav-link" href="" target="_blank">Developer</a>
 					</li>
 				</ul>
-	
-	
 			</div>
 		</nav>
 
@@ -99,25 +96,24 @@
 	<!--opcoes do menu-->
 	<div class="container text-center p-5 mt-5 px-0">
 	  <div class="row">
-	      <div class="col-4">xxxxxxx</div>
-	      <div class="col-4">xxxxxxx</div>
-	      <div class="col-4">xxxxxxx</div>
+	      <div class="col-4">Intruções</div>
+	      <div class="col-4">MÚsicas Oficiais</div>
+	      <div class="col-4">Canções TFM</div>
 	  </div>
 	</div>
 
 	<div class="container text-center p-5">
 	  <div class="row">
-	      <div class="col-4">xxxxxxx</div>
-	      <div class="col-4">xxxxxxx</div>
-	      <div class="col-4">xxxxxxx</div>
+	      <div class="col-4">Toques de Corneta</div>
+	      <div class="col-4">Carreira Militar</div>
+	      <div class="col-4">Dicionário de Gírias</div>
 	  </div>
 	</div>
 
 	<div class="container text-center p-5">
 	  <div class="row">
-	      <div class="col-4">xxxxxxx</div>
-	      <div class="col-4">xxxxxxx</div>
-	      <div class="col-4">xxxxxxx</div>
+	      <div class="col-4">O que é o TG</div>
+	      <div class="col-4">Bússola</div>
 	  </div>
 	</div>
 	<nav class="navbar navbar-dark corCamufladoVerde p-5 mt-5" width="70" height="70">
@@ -128,7 +124,7 @@
   <script type="text/javascript" src="js/index.js"></script>
   <script src="js/jquery-3.3.1.slim.min.js"></script>
   <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script> 
+  <script src="js/bootstrap.min.js"></script>
   <script type="text/javascript">
     app.initialize();
   </script>
