Criação do componente/funcao menu de itens

--- a/www/Tela Sujestiva para Conteudos.html
+++ b/www/Tela Sujestiva para Conteudos.html
@@ -15,6 +15,14 @@
 
 <body>
 	<header>
+		<!--nav onde tem o logo-->
+		<nav class="navbar navbar-dark pt-0 mt-0 corCamufladoVerde">
+			<a class="navbar-brand mx-auto" href="#">
+			<img id="logoTGMenu" src="img/divisas/divisas emborrachadas.jpg" alt="">
+			</a>
+		</nav>
+
+
 	  <!-------------------------------nave onde tem o botao dropdown--------------------------------------->
 	  <nav class="navbar navbar-dark">
 	    <button class="navbar-toggler mb-1 ml-0" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,6 +59,7 @@
 
 	<!-- Conteudo -->
 	<section class="container">
+		<img src="img/armas/infantaria.jpg" class="img-fluid">
 		<div>
 			<p>
 				A Infantaria tem como característica essencial a aptidão para combater a pé, em todos os tipos de terreno e sob quaisquer condições meteorológicas, podendo utilizar variados meios de transporte. Uma de suas missões é conquistar e manter o terreno, aproveitando a capacidade do infante de progredir em pequenas frações, difíceis de serem detectadas em todos os tipos de terreno. Isso permite que ele se aproxime do inimigo para travar o combate corpo-a-corpo. A Infantaria poderá ter especializações das mais diversas: motorizada, blindada, Paraquedista, leve, de selva, de caatinga, de montanha, de guardas e de polícia.
