--- a/www/instrucoes.html
+++ b/www/instrucoes.html
@@ -96,7 +96,12 @@
 		<!--opcoes do menu-->
 		<div class="container text-center p-5 mt-5 px-0">
 			<div class="row">
-				<div class="col-4">Intruções</div>
+				<div class="col-4">
+					<figure class="figure">
+						<img src="img/divisas/menuArmas/1.jpg" class="figure-img img-fluid rounded" alt="...">
+						<figcaption class="figure-caption"></figcaption>
+				  </figure>
+				</div>
 				<div class="col-4">MÚsicas Oficiais</div>
 				<div class="col-4">Canções TFM</div>
 			</div>
@@ -121,15 +126,22 @@
 		</nav>
 	</section>
   <!--Bibliotecas-->
-  <script type="text/javascript" src="cordova.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
-  <script src="js/jquery-3.3.1.slim.min.js"></script>
-  <script src="js/popper.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script type="text/javascript">
-    app.initialize();
-  </script>
-  <script type="text/javascript" src="js/sidebar.js"></script>
+	<!-- Componentes-->
+ 		<script type="text/javascript" src="cordova.js"></script>
+		<script type="text/javascript" src="js/index.js"></script>
+		<script type="text/javascript" src="js/componentes/menuGradeMistaContrutor.js"></script>
+
+	<!-- Dados -->
+		<script type="text/javascript" src="js/conteudo/menuInstruções.js"></script>
+
+	<!-- Biblioteca e Phonegap -->
+		<script src="js/jquery-3.3.1.slim.min.js"></script>
+		<script src="js/popper.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script type="text/javascript">
+			app.initialize();
+		</script>
+		<script type="text/javascript" src="js/sidebar.js"></script>
 </body>
 
 </html>
