--- a/www/instrucoes.html
+++ b/www/instrucoes.html
@@ -7,7 +7,6 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
   <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
-  <meta http-equiv="Content-Security-Policy" content="'unsafe-inline' gap:; style-src 'self' 'unsafe-inline'; media-src *" >
   
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/index.css" />  
@@ -53,12 +52,12 @@
 
 		<!--========= fim side bar ==========-->
 
-
 		<!--nav onde tem o logo-->
 		<nav class="navbar navbar-dark pt-0 mt-0 corCamufladoVerde">
-			<a class="navbar-brand mx-auto" href="#">
-			<img id="logoTGMenu" src="img/organization_logo.gif" width="70" height="70" alt="">
-			</a>
+			<div class="tituloBarra mx-auto" id="tituloPagina">
+				<h1>ASDFG</h1>
+				<img id="logoTGMenu" src="img/divisas/menuArmas/6.jpg" alt="">
+			</div>
 		</nav>
 		
 		<!-------------------------------nave onde tem o botao dropdown--------------------------------------->
@@ -92,7 +91,7 @@
 		</nav>    
 	</header>
 
-	<section id="mesa">
+	<section class="container" id="mesa">
 		<!--opcoes do menu-->
 		<div class="container text-center p-5 mt-5 px-0">
 			<div class="row">
@@ -133,6 +132,7 @@
 
 	<!-- Dados -->
 		<script type="text/javascript" src="js/conteudo/menuInstruções.js"></script>
+		<script type="text/javascript" src="js/conteudo/aqs.js"></script>
 
 	<!-- Biblioteca e Phonegap -->
 		<script src="js/jquery-3.3.1.slim.min.js"></script>
@@ -140,6 +140,17 @@
 		<script src="js/bootstrap.min.js"></script>
 		<script type="text/javascript">
 			app.initialize();
+
+			//Variaveis Globais
+			var mesa = document.getElementById('mesa');
+			var titulo = document.getElementById('tituloPagina');
+
+			//Procedimento que muda o titulo e a tela
+			function controlador(conteudo, tituloNovo){
+				mesa.innerHTML = conteudo;
+				titulo.innerHTML = tituloNovo!=undefined?tituloNovo:'';
+			}
+
 		</script>
 		<script type="text/javascript" src="js/sidebar.js"></script>
 </body>
