Definicoes da criacao do menu principal de forma automatica

--- a/www/instrucoes.html
+++ b/www/instrucoes.html
@@ -133,6 +133,7 @@
 	<!-- Dados -->
 		<script type="text/javascript" src="js/conteudo/menuInstruções.js"></script>
 		<script type="text/javascript" src="js/conteudo/aqs.js"></script>
+		<script type="text/javascript" src="js/conteudo/intensMenuPrincipal.js"></script>
 
 	<!-- Biblioteca e Phonegap -->
 		<script src="js/jquery-3.3.1.slim.min.js"></script>
@@ -151,6 +152,7 @@
 				titulo.innerHTML = tituloNovo!=undefined?tituloNovo:'';
 			}
 
+			controlador(menuGradeMistaContrutor(itensMenuPrincipal), itensMenuPrincipalTitulo);
 		</script>
 		<script type="text/javascript" src="js/sidebar.js"></script>
 </body>
