--- a/www/index.html
+++ b/www/index.html
@@ -115,7 +115,7 @@
 		<script type="text/javascript" src="js/componentes/menuGradeMistaContrutor.js"></script>
 
 	<!-- Dados -->
-		<script type="text/javascript" src="js/conteudo/menuInstruções.js"></script>
+		<script type="text/javascript" src="js/conteudo/menuInstrucoes.js"></script>
 		<script type="text/javascript" src="js/conteudo/aqs.js"></script>
 		<script type="text/javascript" src="js/conteudo/intensMenuPrincipal.js"></script>
 		<script type="text/javascript" src="js/conteudo/armas_quadros_servicos.js"></script>
