Edicoes no componente menuGradeMistaContrutor.js

--- a/www/index.html
+++ b/www/index.html
@@ -79,7 +79,7 @@
 			</button>
 
 			<!--icon de compartilhar o app-->
-			<img src="img/share.png" width="30" height="30">
+			<a target="_blank" href="https://api.whatsapp.com/send?text=Aqui%20deve%20estar%20o%20link%20de%20compartilhamento"><img src="img/share.png" width="30" height="30"></a>
 
 			<!--droplist do botao dropdown-->
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
@@ -99,7 +99,7 @@
 		</nav>    
 	</header>
 
-	<section class="container containerCorrecao" id="mesa">
+	<section class="containerCorrecao" id="mesa">
 		<!--opcoes do menu-->
 		
 	</section>
