--- a/www/index.html
+++ b/www/index.html
@@ -88,6 +88,7 @@
  		<script type="text/javascript" src="cordova.js"></script>
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/componentes/menuGradeMistaContrutor.js"></script>
+		<script type="text/javascript" src="js/componentes/menuListaContrutor.js"></script>
 
 	<!-- Dados -->
 		<script type="text/javascript" src="js/conteudo/menuInstrucoes.js"></script>
