--- a/www/index.html
+++ b/www/index.html
@@ -89,6 +89,7 @@
 		<script type="text/javascript" src="js/index.js"></script>
 		<script type="text/javascript" src="js/componentes/menuGradeMistaContrutor.js"></script>
 		<script type="text/javascript" src="js/componentes/menuListaContrutor.js"></script>
+		<script type="text/javascript" src="js/componentes/conteudoTexto.js"></script>
 
 	<!-- Dados -->
 		<script type="text/javascript" src="js/conteudo/menuInstrucoes.js"></script>
