Atualizacao em patronos.js

--- a/www/index.html
+++ b/www/index.html
@@ -90,12 +90,13 @@
 		<script type="text/javascript" src="js/componentes/menuGradeMistaContrutor.js"></script>
 		<script type="text/javascript" src="js/componentes/menuListaContrutor.js"></script>
 		<script type="text/javascript" src="js/componentes/conteudoTexto.js"></script>
-
+		
 	<!-- Dados -->
 		<script type="text/javascript" src="js/conteudo/menuInstrucoes.js"></script>
 		<script type="text/javascript" src="js/conteudo/aqs.js"></script>
 		<script type="text/javascript" src="js/conteudo/intensMenuPrincipal.js"></script>
 		<script type="text/javascript" src="js/conteudo/armas_quadros_servicos.js"></script>
+		<script type="text/javascript" src="js/conteudo/DadosPatronos.js"></script>
 
 	<!-- Biblioteca e Phonegap -->
 		<script src="js/jquery-3.3.1.slim.min.js"></script>
@@ -123,6 +124,8 @@
 				 */
 				if(!(isBacking==true))
 					hstNav.push([conteudo, tituloNovo]);
+
+				window.scroll(0, 0);
 			}
 
 			//Criação aultomatica do menu principal
