Atualicao no config.xml

--- a/www/index.html
+++ b/www/index.html
@@ -70,7 +70,7 @@
 		
 		<div id="btnShare">
 			<!--icon de compartilhar o app-->
-			<a target="_blank" href="https://api.whatsapp.com/send?text=Aqui%20deve%20estar%20o%20link%20de%20compartilhamento"><img src="img/share.png" width="30" height="30"></a>
+			<a target="_blank" href="https://api.whatsapp.com/send?text=Aqui%20deve%20estar%20o%20link%20de%20compartilhamento"><img src="img/share.png" width="30" height="30"/></a>
 		</div>    
 	</header>
 
@@ -147,5 +147,4 @@
 			
 		</script>
 </body>
-
 </html>
