--- a/www/profilePatrono.html
+++ b/www/profilePatrono.html
@@ -74,8 +74,15 @@
 		</div>    
 	</header>
 
-	<section id="mesa">
-		
+	<section class="containerCorrecao" id="mesa">
+		<div class="profile-card">
+			<di class="image-container">
+				<img src="img/patronos/mallet.jpg" style="width: 100%;"/>
+				<div class="title">
+					<h2>Mallte</h2>
+				</div>
+			</div>			
+		</div>
 	</section>
 
 	<footer class="navbar navbar-dark corCamufladoVerde p-5 mt-5" width="70" height="70">
@@ -131,7 +138,8 @@
 			function mainMenu(){
 				controlador(menuGradeMistaContrutor(itensMenuPrincipal), itensMenuPrincipalTitulo);
 			}
-			mainMenu();
+			
+			//mainMenu();
 
 			function backScreem(){
 				/*Quado se esta voltando ao chegar no menu o array
